# obsidian-wasm-ocr

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  manifest.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
scripts/: build.sh  release.sh  serve_test.py
src/core/: CMakeLists.txt  log.h  main.cpp  ocr_engine.cpp  ocr_engine.h  ppocrv5_dict.h
src/plugin/: esbuild.config.mjs  eslint.config.mjs  main.ts  manifest.json  package.json  settings.ts  styles.css  tsconfig.json
src/plugin/components/: AnalysisPanel.tsx  Header.tsx  ImagePreview.tsx  ResultList.tsx
src/plugin/models/: store.ts
src/plugin/scripts/: update-manifest-version.js
src/plugin/services/: OcrEngine.ts
src/plugin/typings/: ocr-wasm.d.ts  worker.d.ts
src/plugin/utils/: imageUtils.ts
src/plugin/views/: AnalysisView.tsx
src/plugin/worker/: ocr-worker.ts
tests/src/: test.cpp
tests/web/: index.html
tests/web/benchmark/: index.html
